# evapi

./: Cargo.toml  todo.md
src/: data.rs  evade.rs  main.rs  utils.rs
src/collectors/: docs.rs  firefox.rs  keyboard.rs  mod.rs  screenshot.rs  wifi.rs
src/collectors/keyboard/: hook.rs  input.rs
src/com/: dns.rs  https.rs  icmp.rs  mod.rs
src/com/icmp/: bindings.rs  payload.rs
src/crypto/: aes.rs  mod.rs
